bugs squashed

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   padding: 0;
 }
 
-body {
+html, body {
   overflow: hidden;
   background: black;
 }
